third commit finished java recomplete exercises i copied